--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "1.0.0",
   "description": "#### Track Your Job Search",
   "main": "index.js",
-	"type": "module",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon server"
   },
   "repository": {
     "type": "git",
@@ -17,5 +17,11 @@
   "bugs": {
     "url": "https://github.com/AnsariAbdullah/jobify/issues"
   },
-  "homepage": "https://github.com/AnsariAbdullah/jobify#readme"
+  "homepage": "https://github.com/AnsariAbdullah/jobify#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.20"
+  },
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
