--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
   "type": "module",
   "scripts": {
     "server": "nodemon server --ignore client",
-		"client": "npm start --prefix client",
-		"start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
+    "client": "npm start --prefix client",
+    "start": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\""
   },
   "repository": {
     "type": "git",
@@ -32,6 +32,7 @@
     "http-status-codes": "^2.2.0",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.3",
+    "morgan": "^1.10.0",
     "validator": "^13.7.0"
   }
 }
